Fix blurry Twemoji

--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@ img.emoji {
   margin: 0 0.05em 0 0.1em;
   vertical-align: -0.1em;
   display: inline-block;
+  image-rendering: -webkit-optimize-contrast;
 }
 
 .emoji-mart,
